# render-akl

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt  tsconfig.json
backend/cmini/src/: likes.json  main.py  pairs.json  places.json  pyproject.toml  suggestions.txt  table.json
backend/cmini/src/cache/: 3pinky.json  a03.json  a04.json  a05.json  a11.json  a14.json  a16.json  a18.json  a19.json  a20.json  a21.json  a22.json  a25.json  adept.json  adept30.json  aehi.json  aeiouy.json  aies-2.json  al-tornado.json  amini-layout.json  anactualattemptnow.json  ants.json  anxyy.json  any-sfb-enjoyers.json  apt-in.json  apt.json  apt26rstag.json  aptbomination.json  aptex.json  apthd-rstag.json  apthd.json  apthd1-1.json  apthd3-1.json  apthdy.json  aptlf.json  aptmak-lt.json  aptmak.json  aptmak30.json  aptmaka.json  aptmakaroni.json  (+518 more)
backend/cmini/src/cmds/: 8ball.py  alt.py  authors.py  cycle.py  examples.py  flip.py  gen.py  help.py  homerow.py  pairings.py  search.py  sfbs.py  stats.py  suggest.py  swap.py  view.py  wooperball.py
backend/cmini/src/layouts/: 100-swaps.json  3pinky.json  a02.json  a03.json  a05.json  a06.json  a11.json  a12.json  a14.json  a15.json  a16.json  a18.json  a21.json  a24.json  a25.json  a26.json  a28.json  abcfed.json  add.json  adept.json  adept2.json  adept30.json  adnw-english-bigram.json  adnw.json  al-tornado.json  alphabetical.json  amini-layout.json  anrt.json  ants.json  any-sfb-enjoyers.json  aoe.json  apt-in.json  apt26rstag.json  apthd2.json  (+558 more)
render-akl/backend/: pyproject.toml
(+1209 files in other folders)
