[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["James Yip <waterdragenarchive@gmail.com>"]
readme = "README.md"
packages = [{include = "backend", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
